fix: :children_crossing: removed extra spacing when sat-infobox is dragged

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -207,7 +207,7 @@
     border-style: solid;
     overflow: hidden auto;
   }
-  #sat-infobox:after {
+  .satinfo-fixed:after {
     content: '';
     height: calc(var(--bottom-menu-height) + 15px);
     display: block;
